# loggio

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  client.cpp  server.cpp
docker/: Dockerfile
inc/: cli.h  concurrent_map.h  concurrent_queue.h  http_connection.h  http_connection_client.h  http_connection_server.h  latch.h  logger_client.h  logger_server.h  utilities.h
protos/: logger.proto
src/: cli.cpp  concurrent_map.cpp  http_connection.cpp  http_connection_client.cpp  http_connection_server.cpp  latch.cpp  logger_client.cpp  logger_server.cpp
